# bdk-dart

./: .gitignore  Cargo.toml  README.md  justfile  pubspec.yaml
.github/workflows/: ci.yml
bdk_demo/: pubspec.yaml
bdk_demo/ios/Runner.xcodeproj/: project.pbxproj
bdk_demo/lib/: main.dart
bdk_demo/test/: widget_test.dart
example/: main.dart
hook/: build.dart
lib/: bdk.dart
native/: Cargo.toml  rust-toolchain.toml  uniffi-bindgen.rs  uniffi.toml
native/.cargo/: config.toml
native/src/: lib.rs
scripts/: generate_bindings.sh
test/: descriptor_test.dart  offline_persistence_test.dart  offline_wallet_test.dart  test_constants.dart  wallet_behavior_test.dart  wallet_creation_test.dart
